[package]
name = "toff"
version = "0.1.0"
edition = "2021"
description = "Convert to ffmpeg / ffplay command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
shell-escape = "0.1.5"
